@@ -2,6 +2,9 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+
+  MAHOUT-1517: Remove casts to int in ALSWRFactorizer (ssc)
+  
   MAHOUT-1425: SGD classifier example with bank marketing dataset. (frankscholten)
 
   MAHOUT-1511: Renaming core to mrlegacy (frankscholten)
